# elyse_llama

./: .cursorignore  .gitignore  README.md
backend/: app_models.py  cli.py  main.py  pyproject.toml  workflow.py
backend/models/: litellm_service.py  model_lib.yml
backend/services/: llm_service.py
backend/utils/: log_manager.py
chat_sessions/: default_session_store.json
frontend/elyse_client/: package-lock.json  package.json
frontend/elyse_client/src/components/react/: Chat.jsx  Update.jsx
frontend/elyse_client/src/pages/: index.astro
